@@ -212,7 +212,7 @@ SEE ALSO
         Install the Map::Tube concrete metro modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Map-Tube-Moscow>
+    <https://github.com/michal-josef-spacek/Map-Tube-Moscow>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
